--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 		<file-drop accept="font/ttf">
 			<div id="loading"></div>
 			<div id="app">
-				<input type="file" accept="font/ttf" />
+				<section class="landing">
+					<input type="file" accept="font/ttf" />
 
-				<section>
-					Or try one of these:
-					<ul id="demos">
-						<li><button type="button" value="RobotoFlex.ttf">Roboto Flex</button></li>
-					</ul>
+					<section>
+						Or try one of these:
+						<ul id="demos">
+							<li><button type="button" value="RobotoFlex.ttf">Roboto Flex</button></li>
+						</ul>
+					</section>
 				</section>
 			</div>
 		</file-drop>
