--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 			<div id="loading"></div>
 			<div id="app">
 				<section class="landing">
+					<img alt="Variable Font Subsetter" src="/logo.svg" />
+
 					<input type="file" accept="font/ttf" />
 
 					<section>
