--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Variable Axis Subsetter</title>
 		<script defer src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
+		<link rel="stylesheet" href="/src/base.css" />
 		<script type="module" src="/src/landing-page.ts"></script>
 	</head>
 	<body>
@@ -13,19 +14,66 @@
 			<div id="loading"></div>
 			<div id="app">
 				<section class="landing">
-					<img alt="Variable Font Subsetter" src="/logo.svg" />
+					<svg
+						role="heading"
+						aria-level="1"
+						class="logo"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 600 200"
+						height="200"
+						width="600"
+						fill="currentColor"
+					>
+						<text class="var-font" x="300" y="80">Variable Font</text>
+						<text class="subsetter solid animated" x="300" y="160">Subsetter</text>
+						<text class="subsetter outline" x="300" y="160">Subsetter</text>
 
-					<input type="file" accept="font/ttf" />
+						<rect class="cursor animated" x="90" y="90" height="80" width="3" />
+						<g class="flip">
+							<rect class="cursor animated" x="90" y="90" height="80" width="3" />
+						</g>
+					</svg>
 
-					<section>
-						Or try one of these:
-						<ul id="demos">
-							<li><button type="button" value="RobotoFlex.ttf">Roboto Flex</button></li>
+					<label for="upload" class="upload-button__container">
+						<input class="upload-button__input" id="upload" type="file" accept="font/ttf" />
+						<div class="upload-button filled-button">
+							<svg
+								class="upload-button__text"
+								viewBox="0 0 24 24"
+								height="24px"
+								width="24px"
+								fill="currentCOlor"
+								aria-hidden="true"
+							>
+								<path d="M13,4H6v16h12V9h-5V4z M16,15h-3v4h-2v-4H8l4.01-4L16,15z" opacity=".3" />
+								<path
+									d="M14,2H6C4.9,2,4.01,2.9,4.01,4L4,20c0,1.1,0.89,2,1.99,2H18c1.1,0,2-0.9,2-2V8L14,2z M18,20H6V4h7v5h5V20z"
+								/>
+								<polygon points="8,15 11,15 11,19 13,19 13,15 16,15 12.01,11" />
+							</svg>
+							<span class="upload-button__text">Upload a font</span>
+						</div>
+					</label>
+
+					<div class="try-demos">
+						<h2 class="demos__header">Or try one of these:</h2>
+						<ul class="demos" id="demos">
+							<li>
+								<button
+									class="filled-button"
+									type="button"
+									value="RobotoFlex.ttf"
+									style="font-family: 'Roboto Flex'"
+								>
+									Roboto Flex
+								</button>
+							</li>
 						</ul>
-					</section>
+					</div>
 				</section>
 			</div>
 		</file-drop>
+		<div class="paper-overlay"></div>
 		<script type="module">
 			if (window.customElements) {
 				import('file-drop-element');
