--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 						<label for="upload" class="upload-button__container">
 							<input class="upload-button__input" id="upload" type="file" accept="font/ttf" />
-							<div class="upload-button filled-button">
+							<div class="upload-button state-layer">
 								<svg
 									class="upload-button__text"
 									viewBox="0 0 24 24"
@@ -62,7 +62,7 @@
 						<ul class="demos" id="demos">
 							<li>
 								<button
-									class="filled-button"
+									class="state-layer"
 									type="button"
 									value="RobotoFlex.ttf"
 									style="font-family: 'Roboto Flex'"
