Add file-drop css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script type="module" src="/src/landing-page.ts"></script>
 	</head>
 	<body>
-		<file-drop accept="font/ttf">
+		<file-drop class="drop" accept="font/ttf">
 			<div id="loading"></div>
 			<div id="app">
 				<div class="landing">
