Add serif example

--- a/index.html
+++ b/index.html
@@ -65,9 +65,19 @@
 									class="state-layer"
 									type="button"
 									value="RobotoFlex.ttf"
-									style="font-family: 'Roboto Flex'"
+									style="font-family: 'Roboto Flex', sans-serif"
 								>
 									Roboto Flex
+								</button>
+							</li>
+							<li>
+								<button
+									class="state-layer"
+									type="button"
+									value="RobotoSerif.ttf"
+									style="font-family: 'Roboto Serif', serif"
+								>
+									Roboto Serif
 								</button>
 							</li>
 						</ul>
